--- a/package.json
+++ b/package.json
@@ -10,21 +10,15 @@
     "browser-sync": "^2.26.x",
     "del": "^5.1.x",
     "gulp": "^4.0.x",
-    "gulp-autoprefixer": "^7.0.x",
     "gulp-csso": "^3.0.x",
-    "gulp-htmlmin": "^5.0.x",
     "gulp-imagemin": "^6.1.x",
     "gulp-plumber": "^1.2.x",
     "gulp-postcss": "^8.0.x",
-    "gulp-posthtml": "^3.0.x",
     "gulp-rename": "^1.4.x",
     "gulp-sass": "^4.0.x",
     "gulp-sourcemaps": "^2.6.x",
-    "gulp-stylelint": "^9.0.x",
     "gulp-svgstore": "^7.0.x",
-    "gulp-uglify": "^3.0.x",
     "gulp-webp": "^4.0.x",
-    "posthtml-include": "^1.2.x",
     "stylelint": "^10.1.x",
     "stylelint-config-htmlacademy": "^0.1.x"
   },
@@ -46,7 +40,7 @@
     "source/*.html",
     "source/js/**/*.js",
     "source/img/**/*.svg",
-    "source/less/**/*.less"
+    "source/scss/**/*.scss"
   ],
   "author": "",
   "license": "ISC"
